Product Details Show Method and view Created.

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Add new Product</h1>
 
 <% if @product.errors.any? %>
-    <h2>The following errors prevented the article from being saved </h2>
+    <h2>The following errors prevented the Product from being saved </h2>
     
     <ul>
     <% @product.errors.full_messages.each do |msg| %>
