Product Update method and View Created.

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,3 +5,4 @@
 <p> <strong>stock: </strong><%= @product.stock%></p>
 <p> <strong>Price: </strong><%= @product.price%></p>
 
+<%= link_to 'Return to Product listing', products_path%>
