--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,6 +18,8 @@
             <td><%= product.description%></td>
             <td><%= product.stock%></td> 
             <td><%= product.price%></td> 
+            <td><%= link_to 'Show', product_path(product.id)%></td>
+            <td><%= link_to 'Edit', edit_product_path(product.id)%></td>
            
         </tr>
     <%  end %>   
