--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,7 +20,7 @@
             <td><%= product.price%></td> 
             <td><%= link_to 'Show', product_path(product.id)%></td>
             <td><%= link_to 'Edit', edit_product_path(product.id)%></td>
-           
+           <td><%= link_to 'Delete', product_delete_path(product.id), method: :delete, data: { confirm: "Are you sure?" } %></td>
         </tr>
     <%  end %>   
     </tbody>
