--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,4 +5,6 @@
 <p> <strong>stock: </strong><%= @product.stock%></p>
 <p> <strong>Price: </strong><%= @product.price%></p>
 
+<%= link_to 'Edit', edit_product_path(@product) %> |
+<%= link_to 'Delete', product_delete_path(@product.id), method: :delete, data: { confirm: "Are you sure?" } %> |
 <%= link_to 'Return to Product listing', products_path%>
