--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Update Product</h1>
+<h1 class="text-center mt-4">Update Product</h1>
+<br>
 
 <% if @product.errors.any? %>
     <h2>The following errors prevented the product from being saved </h2>
@@ -11,38 +12,62 @@
 <% end %>
 
 
-<%= form_with(model:@product, local: true) do |f| %>
+<div class="row justify-content-center">
+    <div class="col-6">
+            <%= form_with(model:@product,class:"shadow-lg p-3 mb-5 bg-white rounded", local: true) do |f| %>
 
-<p>
-    <%= f.label :name%>
-    <br>
-    <%= f.text_field :name%>
-</p>
+            <div class="form-group row mt-4">
 
-<p>
-    <%= f.label :description%>
-    <br>
-    <%= f.text_area :description%>
-</p>
-
-<p>
-    <%= f.label :stock%>
-    <br>
-    <%= f.text_field :stock%>
-</p>
-
-<p>
-    <%= f.label :price%>
-    <br>
-    <%= f.text_field :price%>
-</p>
-
-<p>
-    <%= f.submit%>
-</p>
+                <%= f.label :name, class:"col-2 col-form-label"%>
+                <div class="col-10"> 
+                <%= f.text_field :name, class:"form-control shadow rounded"%>
+                </div>
+            </div>
 
 
+            <div class="form-group row mt-4">
 
-<% end %>
+                <%= f.label :description, class:"col-2 col-form-label"%>
+                <div class="col-10"> 
+                <%= f.text_area :description,rows:5, class:"form-control shadow rounded"%>
+                </div>
 
-<%= link_to 'Cancel and Return to product listing', products_path%>
+            </div>
+
+            <div class="form-group row mt-4">
+
+                <%= f.label :stock, class:"col-2 col-form-label"%>
+                <div class="col-10"> 
+                <%= f.text_field :stock, class:"form-control shadow rounded"%>
+                </div>
+
+            </div>
+
+            <div class="form-group row mt-4">
+
+                <%= f.label :price, class:"col-2 col-form-label"%>
+                <div class="col-10"> 
+                <%= f.text_field :price, class:"form-control shadow rounded"%>
+                </div>
+            </div>
+
+
+
+            <div class="form-group row m-4">
+                <%= f.submit class:"btn btn btn-primary "%>
+            </div>
+
+
+            <% end %>
+
+            <div class="form-group row m-4">
+            <%= link_to '[ Cancel and Return to product listing ]', products_path%>
+            </div>
+        
+    </div>
+
+    
+</div>
+
+           
+        
