--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,30 +1,40 @@
-<h1>All Product List</h1>
+<h1 class="text-center mt-4">Listing all Products</h1>
 <br>
-<table>
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Stock</th>
-            <th>Price</th>
-            <th colspan="4">Action</th>
-        </tr>
-    </thead>
 
-    <tbody>
-    <% @products.each do |product| %>
-        <tr>
-            <td><%= product.name%></td>
-            <td><%= product.description%></td>
-            <td><%= product.stock%></td> 
-            <td><%= product.price%></td> 
-            <td><%= link_to 'Show', product_path(product.id)%></td>
-            <td><%= link_to 'Edit', edit_product_path(product.id)%></td>
-           <td><%= link_to 'Delete', product_delete_path(product.id), method: :delete, data: { confirm: "Are you sure?" } %></td>
-        </tr>
-    <%  end %>   
-    </tbody>
-</table>
+ <% @products.each do |product| %>
+
+    <div class="row justify-content-md-center">
+        <div class="col-8 mt-4">
+
+                <div class="card text-center shadow-lg p-3 mb-5 bg-white rounded">
+            <div class="card-header">
+                Total Item: <%= product.stock%>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title"><%= product.name%></h5>
+                <p class="card-text"><%= truncate(product.description,length:100)%></p>
+                <p class="card-text">Price: <%= product.price%> <i class="fa fa-inr" style="font-size:16px"></i></p>
+               
+                
+                <%= link_to "View", product_path(product), class: "btn btn-outline-primary" %>
+                <%= link_to "Edit", edit_product_path(product), class: "btn btn-outline-info" %>
+                 <%= link_to "Delete", product_delete_path(product), class: "btn btn-outline-danger" %>
+            </div>
+                <div class="card-footer text-muted">
+                    <small>Created <%= time_ago_in_words(product.created_at) %> ago,
+                    <%= time_ago_in_words(product.updated_at) %> edited ago</small>
+                </div>
+            </div>
+
+        </div>
+    </div>
+   
+
+<%  end %>  
+
+
+
+
 
 <p>
 <%= link_to 'Add New Product', new_product_path %>
