--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,47 +1,67 @@
-<h1>Add new Product</h1>
+<h1 class="text-center mt-4">Add new Product</h1>
+<br>
 
-<% if @product.errors.any? %>
-    <h2>The following errors prevented the Product from being saved </h2>
+
+
+
+<div class="row justify-content-center">
+    <div class="col-6">
+            <%= render 'shared/errors' %>
+            
+            <%= form_with scope: :product, url: products_path,class:"shadow-lg p-3 mb-5 bg-white rounded", local: true ,data: { turbo: false } do |f| %>
+
+            <div class="form-group row mt-4">
+
+                <%= f.label :name, class:"col-2 col-form-label"%>
+                <div class="col-10"> 
+                <%= f.text_field :name, class:"form-control shadow rounded", placeholder:"Enter Product Name"%>
+                </div>
+            </div>
+
+
+            <div class="form-group row mt-4">
+
+                <%= f.label :description, class:"col-2 col-form-label"%>
+                <div class="col-10"> 
+                <%= f.text_area :description,rows:5, class:"form-control shadow rounded",placeholder:"Enter Product Description"%>
+                </div>
+
+            </div>
+
+            <div class="form-group row mt-4">
+
+                <%= f.label :stock, class:"col-2 col-form-label"%>
+                <div class="col-10"> 
+                <%= f.text_field :stock, class:"form-control shadow rounded",placeholder:"Enter Product Stock"%>
+                </div>
+
+            </div>
+
+            <div class="form-group row mt-4">
+
+                <%= f.label :price, class:"col-2 col-form-label"%>
+                <div class="col-10"> 
+                <%= f.text_field :price, class:"form-control shadow rounded",placeholder:"Enter Product Price"%>
+                </div>
+            </div>
+
+
+
+            <div class="form-group row m-4">
+                <%= f.submit class:"btn btn btn-primary "%>
+            </div>
+
+
+            <% end %>
+
+            <div class="form-group row m-4">
+            <%= link_to '[ Cancel and Return to product listing ]', products_path%>
+            </div>
+        
+    </div>
+
     
-    <ul>
-    <% @product.errors.full_messages.each do |msg| %>
-        <li> <%= msg %> </li>
-    <% end %>
-    </ul>
-<% end %>
+</div>
 
-
-<%= form_with scope: :product, url: products_path, local: true ,data: { turbo: false } do |f| %>
-
-<p>
-    <%= f.label :name%>
-    <br>
-    <%= f.text_field :name%>
-</p>
-
-<p>
-    <%= f.label :description%>
-    <br>
-    <%= f.text_area :description%>
-</p>
-
-<p>
-    <%= f.label :stock%>
-    <br>
-    <%= f.text_field :stock%>
-</p>
-
-<p>
-    <%= f.label :price%>
-    <br>
-    <%= f.text_field :price%>
-</p>
-
-<p>
-    <%= f.submit%>
-</p>
-
-
-<% end %>
-
-<%= link_to 'Return to Profucts listing', products_path%>
+           
+        
