All Pages Bootstrap Layout Added.

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -61,13 +61,7 @@
             <% end %>
 
             <div class="form-group row m-4">
-            <%= link_to '[ Cancel and Return to product listing ]', products_path%>
+                <%= link_to "[ Cancel and Return to products listing ]", products_path, class: "btn btn-outline-info" %>
             </div>
-        
     </div>
-
-    
-</div>
-
-           
-        
+</div>    
