--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,7 +19,7 @@
                 
                 <%= link_to "Edit", edit_product_path(@product), class: "btn btn-outline-info" %>
                 <%= link_to "Delete", product_delete_path(@product.id), class: "btn btn-outline-danger" %>
-                <%= link_to "See Product listing", products_path, class: "btn btn-outline-info" %>
+                <%= link_to "See Products listing", products_path, class: "btn btn-outline-info" %>
             </div>
                 <div class="card-footer text-muted">
                     <small>Created <%= time_ago_in_words(@product.created_at) %> ago,
