--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,19 +1,12 @@
 <h1 class="text-center mt-4">Update Product</h1>
 <br>
 
-<% if @product.errors.any? %>
-    <h2>The following errors prevented the product from being saved </h2>
-    
-    <ul>
-    <% @product.errors.full_messages.each do |msg| %>
-        <li> <%= msg %> </li>
-    <% end %>
-    </ul>
-<% end %>
 
 
 <div class="row justify-content-center">
     <div class="col-6">
+
+    <%= render 'shared/errors' %>
             <%= form_with(model:@product,class:"shadow-lg p-3 mb-5 bg-white rounded", local: true) do |f| %>
 
             <div class="form-group row mt-4">
